2019-1/220/users/4264/executions/1813_2566.log
== TEST (2019-06-06 21:09:18) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype-int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:09:46) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:10:59) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.19335
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:11:11) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.12879
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:11:27) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:12:20) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:13:26) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:13:46) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:19:59) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	print(x)
	if(faltas[x] == 2):
		vet[0] += 1
	elif(faltas[x] ==3):
		vet[1] += 1
	elif(faltas[x] == 4):
		vet[2] += 1
	elif(faltas[x] == 5):
		vet[3] += 1
	elif(faltas[x] == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:21:37) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:22:42) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.31503
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:22:53) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:22:56) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.01755
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:23:29) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:24:25) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.26134
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:25:57) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = (vet[x]/size(faltas)*100)
print(round(vet, 1))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:27:07) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:27:19) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.13256
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:27:23) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:27:35) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:27:50) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 2)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:28:00) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 2)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:29:12) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:29:45) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:29:56) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.18165
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:30:50) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	print(x)
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:31:23) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.14623
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18  0  0 18 25 37]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:31:24) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:31:26) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.82319
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
:[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:31:53) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 2)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:32:00) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 2)
print(vet)
		
-- EXECUTION TIME:
1.26699
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:32:43) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100.0, 2)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:33:24) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(1.0*vet[x]/size(faltas)*100, 2)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:34:19) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas), 2)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:36:16) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = vet[x]/size(faltas)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:36:54) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = vet[x]/float(size(faltas))
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:37:35) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=int)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	print(vet[x], size(faltas))
	vet[x] = vet[x]/float(size(faltas))
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:38:22) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=float)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = vet[x]/(size(faltas))
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:38:47) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=float)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/(size(faltas)*100, 1))
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:39:04) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=float)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1))
print(vet)
		
-- ERROR:
File "XXXX", line 18
    vet[x] = round(vet[x]/size(faltas)*100, 1))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:39:08) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=float)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1))
print(vet)
		
-- ERROR:
File "XXXX", line 18
    vet[x] = round(vet[x]/size(faltas)*100, 1))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 21:39:12) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=float)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 21:39:20) 
-- CODE:
from numpy import *
faltas=array(eval(input(":")))
vet=zeros(6, dtype=float)
for x in faltas:
	if(x == 2):
		vet[0] += 1
	elif(x ==3):
		vet[1] += 1
	elif(x == 4):
		vet[2] += 1
	elif(x == 5):
		vet[3] += 1
	elif(x == 6):
		vet[4] += 1
	else:
		vet[5] += 1
for x in range(0, size(vet)):
	vet[x] = round(vet[x]/size(faltas)*100, 1)
print(vet)
		
-- EXECUTION TIME:
1.27659
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
